--- a/Lesson4/clock-app/src/index.css
+++ b/Lesson4/clock-app/src/index.css
@@ -56,6 +56,11 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.boxStyle {
+  border: solid 1px gray;
+  padding: 5px;
+  margin: 5px;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
